feat(config): Update sofle.conf to use Hammer Beam image, enable modifiers on left, and optimize BT/debounce

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -119,14 +119,17 @@ CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA_ONLY_CAPSLOCK=n
 CONFIG_NICE_OLED_WIDGET_LAYER=y
 
 # ==============================================
-# PERIPHERAL SIDE (Right) - Cat animation ONLY
+# PERIPHERAL SIDE (Right) - Hammer Beam Static Image
 # ==============================================
-# Only Cat animation works on peripheral
 # Status widgets will appear automatically at top
 
-# Cat animation on peripheral - positioned below status widgets
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=y
-CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=y
+# Disable animation to use static image
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=n
+CONFIG_NICE_OLED_WIDGET_STATIC_IMAGE_PERIPHERAL=y
+
+# Select Hammer Beam instead of default logic
+CONFIG_NICE_OLED_WIDGET_STATIC_IMAGE_PERIPHERAL_HAMMER_BEAM=y
+
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_MS=960
 # CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CUSTOM_X=0
 # CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CUSTOM_Y=30
@@ -141,17 +144,17 @@ CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_WPM=n
 # LEFT SIDE (Central) Layout:
 # JUST COULDN'T GET IT TO WORK
 
-# # Luna positioned with comfortable margin below status
-# CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_X=0
-# CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_Y=36
+# Luna positioned with comfortable margin below status
+CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_X=0
+CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_Y=36
 
-# # Modifiers positioned with margin below Luna
-# CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_X=0
-# CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_Y=70
+# Modifiers positioned with margin below Luna
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_X=0
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_CUSTOM_Y=70
 
 # Layer positioned at bottom with comfortable space
-# CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_X=0
-# CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_Y=110
+CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_X=0
+CONFIG_NICE_OLED_WIDGET_LAYER_CUSTOM_Y=110
 
 # RIGHT SIDE (Peripheral) Layout:
 # Y=0-18:  Status widgets (auto-rendered, always visible)
@@ -163,3 +166,18 @@ CONFIG_NICE_OLED_WIDGET_OUTPUT_BACKGROUND=n
 
 # Invert display colors - DISABLED (white on black)
 CONFIG_NICE_OLED_WIDGET_INVERTED=n
+
+# ==============================================
+# KEY MATRIX & DEBOUNCE (Decreased for lower latency)
+# ==============================================
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=3
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=3
+
+# ==============================================
+# BLUETOOTH OPTIMIZATION
+# ==============================================
+# Increase transmit power for better connection
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+# Decrease Bluetooth latency
+CONFIG_BT_PERIPHERAL_PREF_MIN_INT=6
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=12
