feat: enable peripheral status bar with compact Hammerbeam art

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -119,20 +119,22 @@ CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA_ONLY_CAPSLOCK=n
 CONFIG_NICE_OLED_WIDGET_LAYER=y
 
 # ==============================================
-# PERIPHERAL SIDE (Right) - Hammer Beam Static Image
+# PERIPHERAL SIDE (Right) - Hammer Beam with Integrated Status Bar
 # ==============================================
-# Status widgets will appear automatically at top
+# This module provides: static art + compact BT/battery bar
+# The status bar is independently configurable per-side
 
 # Disable animation to use static image
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL=n
 CONFIG_NICE_OLED_WIDGET_STATIC_IMAGE_PERIPHERAL=y
 
-# Select Hammer Beam instead of default logic
+# Select Hammer Beam art (compact version auto-selected when status bar enabled)
 CONFIG_NICE_OLED_WIDGET_STATIC_IMAGE_PERIPHERAL_HAMMER_BEAM=y
 
+# Enable independent peripheral status bar (horizontal BT icon + battery bar)
+CONFIG_NICE_OLED_PERIPHERAL_SHOW_STATUS_BAR=y
+
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_MS=960
-# CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CUSTOM_X=0
-# CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CUSTOM_Y=30
 
 # Disable WPM number on peripheral
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_WPM=n
