chore: Remove unused hammerbeam-slideshow submodule

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -82,20 +82,20 @@ CONFIG_NICE_OLED_SHOW_SLEEP_ART_ON_SLEEP=y
 # ==============================================
 # CENTRAL SIDE (Left) - Vertical 32x128 layout
 # ==============================================
+# Layout: BT/Battery status -> Bongo Cat -> Modifiers -> Layer
 
-# WPM Widget - DISABLED on central to prioritize Luna
-# (WPM Graph would work here but takes too much space)
-CONFIG_NICE_OLED_WIDGET_WPM=n
+# WPM Widget - ENABLED (required for Bongo Cat)
+CONFIG_NICE_OLED_WIDGET_WPM=y
 CONFIG_NICE_OLED_WIDGET_WPM_NUMBER=n
 CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=n
 CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=n
 
-# Luna Animation - PRIMARY on central
-CONFIG_NICE_OLED_WIDGET_WPM_LUNA=y
-CONFIG_NICE_OLED_WIDGET_WPM_LUNA_ANIMATION_MS=800
+# Luna Animation - DISABLED (using Bongo Cat instead)
+CONFIG_NICE_OLED_WIDGET_WPM_LUNA=n
 
-# Disable Bongo Cat on central
+# Bongo Cat - PRIMARY animation on central
 CONFIG_NICE_OLED_WIDGET_WPM_BONGO_CAT=y
+CONFIG_NICE_OLED_WIDGET_WPM_BONGO_CAT_ANIMATION_MS=300
 CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_BONGO_CAT=n
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_BONGO_CAT=n
 
@@ -112,7 +112,7 @@ CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_SYMBOL_MACOS=n
 # HID Indicators - DISABLED
 CONFIG_NICE_OLED_WIDGET_HID_INDICATORS=n
 CONFIG_ZMK_HID_INDICATORS=n
-CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA=y
+CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA=n
 CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA_ONLY_CAPSLOCK=n
 
 # Layer Widget - ENABLED
