fix: correct canvas dims (32x128), west.yml submodule ref, and art positioning

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -79,6 +79,11 @@ CONFIG_NICE_OLED_SHOW_SLEEP_ART_ON_SLEEP=y
 # RIGHT (Peripheral): Status(0-18) -> Cat(30-72)
 # Screen: 32x128 pixels (width x height)
 
+# Canvas dimensions - MUST match the OLED display (32x128)
+# Default is 68x160 (nice!view) which causes clipping on nice!oled
+CONFIG_NICE_OLED_CUSTOM_CANVAS_WIDTH=32
+CONFIG_NICE_OLED_CUSTOM_CANVAS_HEIGHT=128
+
 # ==============================================
 # CENTRAL SIDE (Left) - Vertical 32x128 layout
 # ==============================================
@@ -136,6 +141,10 @@ CONFIG_NICE_OLED_PERIPHERAL_SHOW_STATUS_BAR=y
 
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_MS=960
 
+# Art position - reset to (0, 10) for status bar, no manual offsets
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CUSTOM_X=0
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CUSTOM_Y=0
+
 # Disable WPM number on peripheral
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_WPM=n
 
@@ -145,7 +154,6 @@ CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_WPM=n
 
 # LEFT SIDE (Central) Layout:
 # JUST COULDN'T GET IT TO WORK
-
 # Luna positioned with comfortable margin below status
 CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_X=0
 CONFIG_NICE_OLED_WIDGET_LUNA_CUSTOM_Y=36
